fix(security): remove unchecked cast in KeycloakRoleConverter